Several changes: - creates an apitest.html to be able to have a GUI to test the API - resets the databse changes - Stores hashed Password and salt in the DB - Decouples the User object that is persisted in the database from the one used in the API (User vs. UserDTO) - Adds a class that creates and endpoint to test CORS - Implements a CORS filter - ...